; ModuleID = '/home/carl/AnghaBench/openssl/crypto/dsa/extr_dsa_prn.c_DSA_print.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/dsa/extr_dsa_prn.c_DSA_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DSA_print(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = call i32* (...) @EVP_PKEY_new()
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %18, label %13

13:                                               ; preds = %3
  %14 = load i32*, i32** %8, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @EVP_PKEY_set1_DSA(i32* %14, i32* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %13, %3
  store i32 0, i32* %4, align 4
  br label %27

19:                                               ; preds = %13
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @EVP_PKEY_print_private(i32* %20, i32* %21, i32 %22, i32* null)
  store i32 %23, i32* %9, align 4
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @EVP_PKEY_free(i32* %24)
  %26 = load i32, i32* %9, align 4
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %19, %18
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32* @EVP_PKEY_new(...) #1

declare dso_local i32 @EVP_PKEY_set1_DSA(i32*, i32*) #1

declare dso_local i32 @EVP_PKEY_print_private(i32*, i32*, i32, i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
